--- a/index.html
+++ b/index.html
@@ -336,14 +336,16 @@
 		</section>
 
 		<footer>
-			Site réalisé en 2017 par Loric LEDENT
+			Site réalisé en 2018 par moi :)
 		</footer>
-
-		<script src="js/jquery-3.1.0.min.js"></script>
-		<script src="js/jquery.waypoints.min.js"></script>
-		<script src="js/lightbox.js"></script>
-		<script src="js/parallax.min.js"></script>
-		<script src="js/app.js"></script>
 	</div>
+
+
+<script src="js/jquery-3.1.0.min.js"></script>
+<script src="js/jquery.waypoints.min.js"></script>
+<script src="js/lightbox.js"></script>
+<script src="js/parallax.min.js"></script>
+<script src="js/app.js"></script>
+
 </body>
 </html>
